# bits-to-binders

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 12k_all_results.csv  12k_ty_v1.csv  boltz_ipsae_stats.csv  cd20_antibodies.fa  edgeR_statistics.csv  esm2_log_likelihood.csv  master_data_teams.csv  master_data_top10_with_features.csv  master_data_top10_with_features_fixed.csv  master_data_top10_with_features_fixed_6working.csv
data/good/: 12k_binders_teams.fa  Q-424341_leah_normalized_count_v2.csv  _sort.ipynb  axis_angles_aterm_vs_bc.csv  binder_sapscore.csv  ipsae_stats.csv  leah_12k_comb_raw_read_counts.csv  master_data_12k.csv  master_data_teams.csv  master_data_top10.csv  max_pairwise_identities_hamming.csv  method_breakdown.csv
data/individual/: consolidated_mpnn_scores_pivoted.csv  (+6 more)
misc/: d12_reproducibility.md
results/: binder_ab_hits.tsv
scripts/: 12k_dssp.csv  _test.csv  _tmp_goodesm.csv  _tmp_removed.csv  analyze.ipynb  analyze_12k_per_binder.ipynb  analyze_12k_per_team.ipynb  analyze_mmseqs.ipynb  analyze_top10_per_binder.ipynb  auc.py  auc_specify.py  auc_threeclass.py  comprehensive_feature_search.py  comprehensive_feature_search_results_original.csv  compute_angles.py  compute_secondary_struct.py  consolidate_mpnn.ipynb  consolidate_mpnn.py  final_filtering.ipynb  find_contacts.py  jackpot_plot.ipynb  merge.ipynb  merge_12k_per_binder.ipynb  merge_12k_top10.ipynb  merge_all_data.ipynb  mmseqs_pident.ipynb  mmseqs_to_abs.ipynb  parse_tlimmuno2.ipynb  plot_methods_simple.ipynb  seq_id.ipynb  test_leah_detected.ipynb  top_ten_plots.ipynb
(+26 files in other folders)
